# ohbother

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  build.py  dev_cleanup.py  pyproject.toml  setup.py
.github/workflows/: artifact_release.yml  build.yml  go.yml  wheels.yml
_data_example/: _data.go  _data.py  _data_readme.md  _data_util.go  _dataexample.py
examples/: BenchmarkExample.py  FlattenedExample.py  HighThroughputExample.py  MultiStreamExample.py  minimaltest.py
ohbother/: __init__.py  benchmark.py  config.py  diagnose_imports.py  parallel_utils.py  receive.py  transmit.py  utilities.py
ohbother/core/: benchmark.go  config.go  go.mod  packet.go  receive.go  send_stream.go  simpleutils.go  transmit.go  transmit_status.go  utilities.go  utilities_linux.go  utilities_mac.go  utilities_test.go  utilities_win.go  utils.go  utils.gone
ohbother/core/cmd/: main.go
ohbother/core/src/: ohbother.go
ohbother/core/src/config/: config.go
ohbother/core/src/demo/: benchmark.go
ohbother/core/src/packet/: packet.go
ohbother/core/src/receive/: receive.go
ohbother/core/src/transmit/: send_stream.go  transmit.go  transmit_status.go
ohbother/core/src/utils/: utilities.go  utilities_linux.go  utilities_mac.go  utilities_win.go
ohbother/python_tests/: parallel_utils_test.py
src/: benchmark.go  build.py  config.go  go.mod  go.sum  receive.go  transmit.go  utilies_linux.go
